<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:adjustViewBounds="false"
        android:background="?attr/colorSecondaryVariant"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parkkilogomuokattu" />

    <ImageView
        android:id="@+id/ivParkA"
        android:layout_width="367dp"
        android:layout_height="439dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:srcCompat="@drawable/sijainti_a" />

    <ImageView
        android:id="@+id/ivParkB"
        android:layout_width="323dp"
        android:layout_height="392dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sijainti_b" />

    <ImageView
        android:id="@+id/ivParkC"
        android:layout_width="359dp"
        android:layout_height="365dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:srcCompat="@drawable/sijainti_c" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="411dp"
        android:layout_height="147dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="152dp"
            android:layout_height="150dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_sA"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autoSizeTextType="uniform"
                android:text=""
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_sB"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autoSizeTextType="uniform"
                android:text="@string/tv_sijaintiB"
                tools:targetApi="o" />

            <TextView
                android:id="@+id/tv_sC"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:autoSizeTextType="uniform"
                android:text="@string/tv_sijaintiC"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_vapaana_A"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bu_sijaintiA"
                style="@style/Button.Cyan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"

                android:onClick="onClicksijaintiA"
                android:text="@string/bu_sijaintiA"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:iconTint="#009688" />

            <Button
                android:id="@+id/bu_sijaintiB"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"
                android:onClick="onClicksijaintiB"
                android:text="@string/bu_sijaintiB"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <Button
                android:id="@+id/bu_sijaintiC"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#009688"
                android:onClick="onClicksijaintiC"
                android:text="@string/bu_sijaintiC"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dataa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="192dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>