<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:layout_marginTop="25dp"
            android:scaleType="fitCenter"
            android:src="@drawable/parkkilogomuokattu" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="25sp"
            android:text="Käyttäjätiedot"
            tools:ignore="RtlCompat" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/mockemail" />

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/xxx_123" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <EditText

            android:id="@+id/et_email"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Sähköposti"
            android:layout_marginTop="50dp"
            android:inputType="textEmailAddress"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="360dp"
            android:ems="10"
            android:layout_height="wrap_content"
            android:hint="Salasana"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/et_register"
            android:layout_width="360dp"
            android:ems="10"
            android:layout_height="wrap_content"
            android:hint="@string/rekisteriOtsikko"
            android:inputType="textPersonName"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/bu_editInformation"
            android:layout_marginTop="10dp"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:text="Vaihda tietosi"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:background="@color/parkkiapuri"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_register_icon"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/bu_palaaMA"
            tools:ignore="SpeakableTextPresentCheck"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="end"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/twotone_arrow_circle_left_24" />


    </LinearLayout>


</FrameLayout>




