<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:background="#018685"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/parkkilogomuokattu" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/corners"
        android:gravity="center"
        android:hint="Sijainti X"
        android:shadowColor="@color/parkkiapuri"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_currentTime"
        android:layout_width="186dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:text="@string/tv_aika"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:elevation="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@+id/bu_return"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_logo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_01"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/twotone_access_time_24"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="Varausaika"
                    android:textAlignment="viewStart"
                    android:textSize="25sp"
                    tools:ignore="NestedWeights,RtlCompat,RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_02"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_directions_car_24"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="Rekisterinumero"
                    android:textAlignment="viewStart"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/tv_idParkitOtsikko"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/baseline_exit_to_app_24"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:text="Valittu parkkipaikka"
                    android:textAlignment="viewStart"
                    android:textSize="22sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/tv_varausAika"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="@string/tv_aika"
                    android:textAlignment="center"
                    android:textSize="27sp"
                    tools:ignore="NestedWeights,RtlCompat" />

                <TextView
                    android:id="@+id/tv_licensePlate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="XML-232"

                    android:textAlignment="center"
                    android:textSize="27sp"
                    tools:ignore="RtlCompat" />

                <TextView
                    android:id="@+id/tv_idParkit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:hint="4"

                    android:textAlignment="center"
                    android:textSize="23sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bu_ResTimeSub"
        style="@style/whitebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="110dp"
        android:text="@string/poisto"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bu_ResTimeAdd"
        style="@style/layout_buttonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="110dp"
        android:text="@string/lisäys"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bu_resConf"
        style="@style/layout_buttonStyle"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:drawableEnd="@drawable/twotone_fact_check_24"
        android:drawableTint="@color/white"
        android:text="@string/bu_confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingEnd="15dp"
        tools:textStyle="bold" />




</androidx.constraintlayout.widget.ConstraintLayout>